02-microservice-k8s/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-02-microservice-k8s-service
spec:
  selector:
    app: otus-02-microservice-k8s-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
